--- a/src/app/weather-search/weather-search.component.html
+++ b/src/app/weather-search/weather-search.component.html
@@ -13,7 +13,8 @@
                                     placeholder="Zipcode"
                                     type="number"
                                     id="addLocation"
-                                    formControlName="input"/>
+                                    formControlName="input"
+                                    /> 
                         </div>
                         <div class="col align-self-end">
                             <button
